add models to products app

--- a/backend/products/templates/products/product-details.html
+++ b/backend/products/templates/products/product-details.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html class="no-js" lang="en">
 
@@ -8,34 +9,34 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
 
     <!-- CSS 
     ========================= -->
     <!--bootstrap min css-->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!--owl carousel min css-->
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
     <!--slick min css-->
-    <link rel="stylesheet" href="assets/css/slick.css">
+    <link rel="stylesheet" href="{% static 'css/slick.css' %}">
     <!--magnific popup min css-->
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
     <!--font awesome css-->
-    <link rel="stylesheet" href="assets/css/font.awesome.css">
+    <link rel="stylesheet" href="{% static 'css/font.awesome.css' %}">
     <!--animate css-->
-    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="{% static 'css/animate.css' %}">
     <!--jquery ui min css-->
-    <link rel="stylesheet" href="assets/css/jquery-ui.min.css">
+    <link rel="stylesheet" href="{% static 'css/jquery-ui.min.css' %}">
     <!--slinky menu css-->
-    <link rel="stylesheet" href="assets/css/slinky.menu.css">
+    <link rel="stylesheet" href="{% static 'css/slinky.menu.css' %}">
     <!--plugins css-->
-    <link rel="stylesheet" href="assets/css/plugins.css">
+    <link rel="stylesheet" href="{% static 'css/plugins.css' %}">
 
     <!-- Main Style CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <!--modernizr min js here-->
-    <script src="assets/js/vendor/modernizr-3.7.1.min.js"></script>
+    <script src="{% static 'js/vendor/modernizr-3.7.1.min.js' %}"></script>
 
 </head>
 
